src/objects/Key_School__c.object
<CustomObject>
    <description>Targeting information for key schools (detail record to school account record)</description>
    <fields>
        <fullName>Alias__c</fullName>
        <description>The name of record migrated from source org</description>
        <label>Alias</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <description>Captures the date from which the school is a key school</description>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <description>Indicates Monash&apos;s faculty for which it is a key school</description>
        <label>Faculty</label>
        <picklist>
            <picklistValues>
                <fullName>OFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art, Design and Architecture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business and Economics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engineering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Law</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medicine, Nursing and Health Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy and Pharmaceutical Sciences</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Science</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority_Status__c</fullName>
        <description>Indicates the status accorded to the school</description>
        <label>Priority Status</label>
        <picklist>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>International</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This links to the school account</description>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Key Schools</relationshipLabel>
        <relationshipName>Key_Schools</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <description>Indicates the year for which the school is a key school</description>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Key School</label>
    <nameField>
        <displayFormat>PD-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Key Schools</pluralLabel>
    <recordTypes>
        <fullName>Faculty_User_RT</fullName>
        <active>true</active>
        <description>Record Type for picklist selection</description>
        <label>Default for Faculty User</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Year_Numeric_Validation</fullName>
        <active>true</active>
        <description>Validation rule to prevent users from entering alpha characters in year</description>
        <errorConditionFormula>ISNUMBER(Year__c)= FALSE</errorConditionFormula>
        <errorMessage>Please enter a valid year for this record</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>year_length_validation_2</fullName>
        <active>true</active>
        <description>Rule to prevent incorrect year from saving</description>
        <errorConditionFormula>LEN(Year__c)&lt;4</errorConditionFormula>
        <errorMessage>The year field should contain four characters</errorMessage>
    </validationRules>
</CustomObject>